# goes-truecolor-intake

./: .gitignore  .pre-commit-config.yaml  catalog.yml  setup.cfg
eurec4a_goes16_truecolor_rgb/: __main__.py  source_data.py
goes-truecolor-intake/: __main__.py  s3_upload.py  source_data.py
goes_truecolor_intake/: __init__.py  __main__.py  s3_upload.py  source_data.py
notebooks/: Download and generate RGB geotiff.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  plot-from-catalog.ipynb  try metpy crs.ipynb
