[metadata]
name = eurec4a-goes-truecolor-intake
version = 0.1.0
author = Leif Denby
author_email = leif@denby.eu
description = processing of truecolor RGB composites for EUREC4A
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/eurec4a-goes-truecolor-intake

[options]
packages=find:
install_requires =
  satpy[abi_l1b]
  satdata
  xarray
  netcdf4
  rioxarray
  intake
  pyspectral
  pyorbital
  metpy
  loguru
  suntime

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  jupyter
  ipython
  matplotlib
  cartopy
  nb-black
  suntime

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc
per-file-ignores = __init__.py:F401
# settings for using flake8 with black:
max-line-length = 88
extend-ignore = E203
