[metadata]
name = goes-truecolor-intake
version = 0.1.0
author = Leif Denby
author_email = leif@denby.eu
description = create intake catalogs of GOES-16 truecolor RGB composites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/goes-truecolor-intake

[options]
packages=find:
install_requires =
  satpy[abi_l1b]
  satdata
  xarray
  netcdf4
  rioxarray
  intake
  pyspectral
  pyorbital

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
lint =
  pre-commit
dev =
  %(test)s
  %(lint)s
  jupyter
  ipython
  matplotlib
  cartopy
